force-app/main/default/objects/Course_Enrollment_Data__c/Course_Enrollment_Data__c.object-meta.xml
<CustomObject>
    <description>This object captures the Enrollment Data from Formstack in text fields.</description>
    <label>Course Enrollment Data</label>
    <nameField>
        <displayFormat>CED-{000000}</displayFormat>
        <label>Course Enrollment Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Enrollment Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>