force-app/main/default/objects/Course_Enrollment_Data__c/fields/Additional_Materials_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Additional_Materials_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Materials Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>