force-app/main/default/objects/Course_Enrollment_Data__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>