force-app/main/default/objects/Course_Enrollment_Data__c/fields/Course_Description_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Course_Description_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Description Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>