force-app/main/default/objects/Course_Enrollment_Data__c/fields/Course_Enrolling_in__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrolling_in__c</fullName>
    <label>Course Enrolling in:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>