force-app/main/default/objects/Course_Enrollment_Data__c/fields/Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Enrollment</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Course Enrollment Data</relationshipLabel>
    <relationshipName>Course_Enrollment_Data</relationshipName>
    <type>Lookup</type>
</CustomField>