force-app/main/default/objects/Course_Enrollment_Data__c/fields/Course_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_Session_ID__c</fullName>
    <label>Course Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>