force-app/main/default/objects/Course_Enrollment_Data__c/fields/Course_SFID__c.field-meta.xml
<CustomField>
    <fullName>Course_SFID__c</fullName>
    <label>Course SFID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>