force-app/main/default/objects/Course_Enrollment_Data__c/fields/IFD_Portion__c.field-meta.xml
<CustomField>
    <fullName>IFD_Portion__c</fullName>
    <label>IFD Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>