force-app/main/default/objects/Course_Enrollment_Data__c/fields/New_Learner__c.field-meta.xml
<CustomField>
    <fullName>New_Learner__c</fullName>
    <label>New Learner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>