force-app/main/default/objects/Course_Enrollment_Data__c/fields/Participant_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Participant_Phone_Number__c</fullName>
    <label>Participant Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>