force-app/main/default/objects/Course_Enrollment_Data__c/fields/Please_Specify__c.field-meta.xml
<CustomField>
    <fullName>Please_Specify__c</fullName>
    <label>Please Specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>