force-app/main/default/objects/Course_Enrollment_Data__c/fields/Refund_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Refund_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>