force-app/main/default/objects/Course_Enrollment_Data__c/fields/Sponsor_Portion__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Portion__c</fullName>
    <label>Sponsor Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>