force-app/main/default/objects/Course_Enrollment_Data__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>This field is used to match the correct course session.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>