force-app/main/default/objects/Course_Enrollment_Data__c/fields/Using_Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Using_Discount_Code__c</fullName>
    <label>Using Discount Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>