force-app/main/default/objects/Course_Enrollment_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Enrolling_in__c</columns>
    <columns>Course_Enrollment__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Participant_Email__c</columns>
    <columns>Participant_Name__c</columns>
    <columns>Participant_Phone_Number__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Street_Address__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>